# notify

./: .gitignore  .travis.yml  README.md  agr.py  app.py  db.py  main.py  pyproject.toml  routes.py  settings.py
auth/: db.py  decorators.py  exceptions.py  middlewares.py  models.py  routes.py  tools.py  views.py
config/: notify.yaml
notify/: db.py  exceptions.py  init_db.py  models.py  routes.py  settings.py  views.py
static/css/: format.css  main.css  reset.css  responsive.css
static/js/: main.js  validation.js
static/templates/: 403.html  404.html  500.html  base.html  delete_account.html  index.html  login.html  new_task.html  profile.html  profile_view.html  signup.html  single_task.html  tasks.html
